# app/models/employee.rb
@@ -1,27 +1,54 @@
 class Employee < ApplicationRecord
-  has_many :salary_records, dependent: :restrict_with_error
+  belongs_to :department
 
-  validates :employee_number, presence: true, uniqueness: true
-  validates :first_name, :last_name, :email, :country, :employment_status,
+  has_many :salary_structures,
+           dependent: :restrict_with_error
+
+  has_many :payslips,
+           dependent: :restrict_with_error
+
+  STATUSES = %w[active terminated on_leave].freeze
+
+
+  validates :employee_code,
+            presence: true,
+            uniqueness: true
+
+  validates :first_name,
+            :last_name,
+            :email,
+            :country,
+            :designation,
+            :status,
+            :joined_date,
             presence: true
+
   validates :email,
             uniqueness: true,
-            format: { with: URI::MailTo::EMAIL_REGEXP }
-  validates :employment_status, inclusion: { in: %w[active inactive] }
+            format: {
+              with: URI::MailTo::EMAIL_REGEXP
+            }
 
-  scope :active, -> { where(employment_status: "active") }
-  scope :inactive, -> { where(employment_status: "inactive") }
+  validates :status,
+            inclusion: {
+              in: STATUSES
+            }
+
+  scope :active, -> { where(status: "active") }
+  scope :inactive, -> { where.not(status: "active") }
+  scope :terminated, -> { where(status: "terminated") }
+  scope :on_leave, -> { where(status: "on_leave") }
 
   scope :by_country, ->(country) {
     where(country: country) if country.present?
   }
 
-  scope :by_department, ->(department) {
-    where(department: department) if department.present?
+  scope :by_department, ->(department_id) {
+    where(department_id: department_id) if department_id.present?
   }
 
   scope :by_status, ->(status) {
-    where(employment_status: status) if status.present?
+    where(status: status) if status.present?
   }
 
   scope :search, ->(term) {
@@ -30,10 +57,11 @@ class Employee < ApplicationRecord
     pattern = "%#{sanitize_sql_like(term)}%"
 
     where(
-      "employee_number ILIKE :pattern OR
+      "employee_code ILIKE :pattern OR
        first_name ILIKE :pattern OR
        last_name ILIKE :pattern OR
-       email ILIKE :pattern",
+       email ILIKE :pattern OR
+       designation ILIKE :pattern",
       pattern: pattern
     )
   }
@@ -43,9 +71,9 @@ class Employee < ApplicationRecord
   end
 
   def current_salary
-    salary_records
-      .where("effective_date <= ?", Date.current)
-      .order(effective_date: :desc)
+    salary_structures
+      .where("effective_from <= ?", Date.current)
+      .order(effective_from: :desc)
       .first
   end
 end
